Add registration and authorization

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,12 @@
                                 <li><a class="dropdown-item" href="/imputation">Импутация данных</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Регистрация</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Войти</a>
+                        </li>
                     </ul>
                 </div>
             </div>
