--- a/templates/base.html
+++ b/templates/base.html
@@ -41,11 +41,13 @@
                                 <li><a class="dropdown-item" href="/imputation">Импутация данных</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/register">Регистрация</a>
-                        </li>
+                    </ul>
+                    <ul class="navbar-nav mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="/login">Войти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Регистрация</a>
                         </li>
                     </ul>
                 </div>
