--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,17 @@
             </div>
         </nav>
     </header>
+    <div id="google_translate_element"></div>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+              pageLanguage: 'ru',
+              includedLanguages: 'en,ru'
+            }, 'google_translate_element');
+          }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <div>
         {% block content %}
         {% endblock content %}
