--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -8,9 +8,9 @@
                     <div class="bg-image card shadow-1-strong"
                          style="background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(106,68,76,1) 100%);">
                         <div class="card-body text-white">
-                            <h1>Блог о нейронных сетях</h1>
-                            <h3>Страница о блоге</h3>
-                            <img src="/static/neural_networks.jpg" alt="Нейронки" width="50%" height="50%">
+                            <h1>Предсказание</h1>
+                            <h5>Эти сети делают какие-то выводы на основе заданной информации. Сюда можно отнести как предсказание будущих доходов по текущим данным, так и «дорисовывание» картинки</h5>
+                            <img src="/static/prediction.png" alt="Предсказание">
                         </div>
                     </div>
                 </div>
