--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Машинное обучение</a>
+                <a class="navbar-brand" href="/">Нейронные сети</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Переключатель навигации">
@@ -30,15 +30,12 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Машинное обучение
+                                Задачи нейронных сетей
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/stat">Статистические методы классификации</a></li>
-                                <li><a class="dropdown-item" href="/gray">Модели Грея</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="/imputation">Импутация данных</a></li>
+                                <li><a class="dropdown-item" href="/classification">Классификация</a></li>
+                                <li><a class="dropdown-item" href="/prediction">Предсказание</a></li>
+                                <li><a class="dropdown-item" href="/recognition">Распознавание</a></li>
                             </ul>
                         </li>
                     </ul>
