--- a/templates/register.html
+++ b/templates/register.html
@@ -4,13 +4,31 @@
 
 <!--Register--> 
 <div class="container py-5">
-	<h1>Register</h1>
-	<form method="POST">
-		{% csrf_token %}
-		{{ register_form }}
-		<button class="btn btn-primary" type="submit">Register</button>
-	</form>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+    <h1>Регистрация</h1>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="{{ register_form.username.id_for_label }}">Имя пользователя: </label>
+            {{ register_form.username }}
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="{{ register_form.email.id_for_label }}">Email: </label>
+            {{ register_form.email }}
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="{{ register_form.password1.id_for_label }}">Пароль: </label>
+            {{ register_form.password1 }}
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="{{ register_form.password2.id_for_label }}">Подтверждение пароля: </label>
+            {{ register_form.password2 }}
+        </div>
+        <br>
+        <button class="btn btn-primary" type="submit">Зарегистрироваться</button>
+    </form>
+    <p class="text-center">Уже есть аккаунт, <a href="/login">авторизуйтесь</a> тогда.</p>
 </div>
-
 {% endblock %}
