--- a/templates/about.html
+++ b/templates/about.html
@@ -10,6 +10,9 @@
                         <div class="card-body text-white">
                             <h1>Блог о нейронных сетях</h1>
                             <h3>Страница о блоге</h3>
+                            <h3>Блог посвящен теме "Нейронные сети"</h3>
+                            <h3>Выполнен студентами группы ДПИ23-1м: Юдин Артем, Шухнова Ирина, Петров Анна, Кочнева Арина</h3>
+                            <br>
                             <img src="/static/neural_networks.jpg" alt="Нейронки" width="50%" height="50%">
                         </div>
                     </div>
