--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html lang="ru">
 <head>
-    <title>Блог о машинном обучении</title>
+    <title>Блог о нейронных сетях</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -40,9 +40,16 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav mb-lg-0">
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                {{ user.first_name }}
+                                <a class="nav-link" href="/logout">Выйти ({{ user.username }})</a>
+                            </li>
+                        {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="/login">Войти</a>
                         </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="/register">Регистрация</a>
                         </li>
